sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: ')' expected but integer literal found.
					p -=1
                                            ^